movie2archive/static/css/style.css
/* Import Google fonts Big - Headings, Poppins - Body text */
@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;400;500;700&family=Poppins:wght@400;500;700&display=swap');

:root, html, * {
    margin: 0;
    padding: 0;
}

/* Colour variables */

:root { 
    --white: #ffffff;
    --black: #000000;
    --grey: #565555; /* Davys Grey */
    --orange: #FFB341; /* Yellow Orange */
    --red: #ED254E; /* Red Crayola */
    --silver: #C4CAD0; /* Silver Sand */
    --cream: #FCF7FF; /* Magnolia */
    }

/* commonly used colour styles */

.navbar-dark a{
    color: var(--silver);
}

.navbar-dark a:hover {
    color: var(--orange);
}

.text-silver {
    color: var(--silver);
}
.page-main-heading h1 {
    font-size: 3rem;
}

/* Structure styles */

html, body {
    font-family: 'Poppins', sans-serif;
    font-size: 100%;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

body {
    padding-top: 56px;
}

h1,h2,h3,h4,h5,h6 {
    font-family: 'Big Shoulders Display', cursive;
}

.navbar .navbar-brand, .brand-logo {
    font-family: 'Big Shoulders Display', cursive;
    font-size: 2rem;
}

hr {
    border: 3px solid var(--orange);
    color: var(--orange);
}

.hr-50 {
    width: 25%;
    margin: 2rem auto;
    color: var(--orange);
    border-left: 3px solid var(--orange);
    opacity: 1;
}

main {
    flex: 1 0 auto;
}

footer {
    display: flex;
    align-content: center;
    justify-content: center;
    background-color: var(--orange);
}

/* Homepage */

.home-page-image, .page-image-small {
    position: relative;
    min-height: 500px;

    /* Image source, Unsplash: https://unsplash.com/photos/BQTHOGNHo08 Author: https://unsplash.com/@tysonmoultrie */
    background-image: url(../images/bg_homepage_tyson_moultrie_unsplash.jpg);
    background-repeat: no-repeat;
    background-size: cover;

    /* Stack overflow source for text shadow: https://stackoverflow.com/questions/34702477/add-a-dark-overlay-to-background-image */
    box-shadow: 0px 4px 4px 0px #00000040,inset 0 0 0 1000px rgba(0,0,0,.75);
}

.home-page-main-heading {
    margin-top: 4rem;
    padding-bottom: 4rem;
}
.home-page-main-heading h1 {
    font-size: 5rem;
}

.home-page-main-inner, .home-page-secondary-inner {
    margin-top: 1rem;
    padding: 25px;
}

.banner-taglines p {
    padding-left: 2rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.bg-quotes-wrapper {
    background-color: var(--cream);
}

.content-divider-border-small {
    border-left: 3px solid var(--orange);
}

.large-image img {
    width: 100%;
    border: 2px solid var(--orange);
}

.medium-image {
    text-align: center;
}

.medium-image img {
    width: 60%;
    text-align: center;
    border: 2px solid var(--orange);
}

/* Quote section */

.quotes {
    font-size: 3rem;
    color: var(--orange);
}

.blockquote h2 {
    font-size: 3rem;
}

.movie_number {
    font-size: 3rem;
    color: var(--red);
}

/* About page */

.page-image-small {
    min-height: 100px;
}

.medium-icon {
    text-align: center;
}

.medium-icon i {
    font-size: 20rem;
}

/* Profile page */

.profile-page {
    margin-bottom: 1rem;
}

.content-divider-border {
    border-left: 3px solid var(--orange);
}

.profile-page-main-inner .option-container {
    margin-top: 1rem;
    padding: 25px;
}

.main-area i, .user-account-options i {
    font-size: 2rem;
}

.large-icon {
    text-align: center;
}
.large-icon i {
    font-size: 26rem;
}

.list-group a:hover {
    background-color: var(--orange);
    color: var(--black);
}
/* Collection area */

.filter-media-type {
    padding-top: 0;
}

.collection-button-group {
    margin-left: auto;
    margin-right: 1rem;
}

/* Single Movie view */

.box-art img {
    width: 100%;
    border: 2px solid var(--orange);
}

.box-art small, .box-art h3, .box-art a {
    padding: 1rem 1rem;
}

/* Footer */

.site-footer {
    margin-bottom: 0;
}
.social-icons i {
    font-size: 2rem;
    color: var(--grey);
}

.social-icons i:hover {
    color: var(--black);
}

/* Media queries */

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .banner-taglines p {
        padding-left: 1rem;
    }
    .content-divider-border-small {
        padding-right: 2rem;
    }
    
    .profile-page-banner-inner, .profile-page-main-inner, .user-account-page-inner {
        padding: 0 2rem;
    }

    .main-area, .user-account-options, .secondary-area {
        margin-top: 2rem;
        padding: 2rem;
    }
}

